# wiki-framework-2026-04

./: .pre-commit-config.yaml  README.md  RULES.md  SCHEMA.md  deno.json  index.md  log.md  pyproject.toml
.agents/: zowiki.md
.github/workflows/: shacl-validation.yml  sync.yml
skills/: SKILL.md  lint.ts
skills/action/: skill.md  template.md
skills/book/: heartbeat.ts
skills/book/daily/: skill.md  template.md
skills/daily/: config.md  skill.md  template.md
skills/ea/: skill.md
skills/hourly/: config.md  skill.md  template.md
skills/idea/: config.md  skill.md  template.md
skills/obsidian/bases/: skill.md
skills/obsidian/bases/references/: FUNCTIONS_REFERENCE.md
skills/obsidian/canvas/: skill.md
skills/obsidian/canvas/references/: EXAMPLES.md
skills/obsidian/cli/: skill.md
skills/obsidian/markdown/: skill.md
skills/obsidian/markdown/references/: CALLOUTS.md  EMBEDS.md  PROPERTIES.md
skills/person/: config.md  skill.md  template.md
skills/project/: config.md  skill.md  template.md
skills/web/defuddle/: skill.md
skills/zet/: config.md  skill.md  template.md
src/: __main__.py
src/frontmatter/: __init__.py
src/shacl/: __init__.py
src/sparql/: __init__.py
templates/: person.md  project.md
tests/: test_frontmatter.py  test_init.py  test_shacl.py  test_sparql.py
wiki/: __main__.py  daily-2026-04-16.md  index.md  log.md  network.md  projects.md  reminders.md
wiki/templates/: person.md  project.md
wiki/templates/full/: pyproject.toml
wiki/templates/full/shapes/: action.ttl  page.ttl  person.ttl  project.ttl  zet.ttl
wiki/templates/full/wiki/: README.md  person.md  project.md
wiki/templates/minimal/: README.md  pyproject.toml
